Fix ssl widget layout issue with horizontal scroll.

--- a/src/modules/addons/enom_pro/css/admin.less
+++ b/src/modules/addons/enom_pro/css/admin.less
@@ -44,6 +44,10 @@ Licensed from Orion IP Ventures, LLC
 
 .enom_pro_widget {
 	padding: 20px;
+	
+	.ssl_widget {
+		overflow-x: scroll;
+	}
 }
 
 .enom_pro_output {
